feat: change photo

--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ hr {
     height: 290px;
     border-radius: 50%;
     margin-top: 50px;
-    background-image: url(assets/img/photo.png);
+    background-image: url(assets/img/photo.jpeg);
     background-repeat: no-repeat;
     background-size: cover;
 }
